button spacing fix

--- a/src/app/image-browser/image-browser.component.css
+++ b/src/app/image-browser/image-browser.component.css
@@ -36,8 +36,6 @@
 /*   margin-right: auto;
   margin-left: auto; */
 
-
-
 }
 
 button{
@@ -59,6 +57,7 @@ button{
 
   font-size: 20px; */
   margin: 5px;
+  height: 30px;
 } 
 
 
@@ -67,21 +66,34 @@ button{
 }
 
 .pager-buttons{
-  margin-left: 100px;
-  margin-right: 100px;
+margin-right: 20px;
+margin-left: 30px;
 }
 
 .browser-header{
-  display: flex;
-  margin-right: auto;
+ display: flex;
+ justify-content: space-between;
+/*   margin-right: auto;
   margin-left: auto;
   align-content: center;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  */
 }
 
-.searchbutton{
-  
+.searchbar{
+  display: flex;
+  align-content: flex-start;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  max-height: 25px;
+}
+
+
+.zoomButtons{
+  display: flex;
+  align-content: flex-end;
+  align-items: center;
 }
 
 
